--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -167,7 +167,7 @@
     height: 15px;
     position: absolute;
     top: 40%;
-    margin-left: -35px;
+    left: -25px;
     display: block !important;
 }
 
@@ -178,5 +178,14 @@
     top: 40%;
     right: -25px;
     display: block !important;
+}
+
+header {
+  overflow: hidden;
+  width: 100%;
+  height: 400px;
+}
+header img {
+  margin: -250px 0 0 0;
 }
 .owl-prev i, .owl-next i {transform : scale(1,6); color: #ccc;}
