--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,7 +1,7 @@
 .intro{
-    opacity: 0.7;
+    opacity: 1;
     width: 100%;
-    height: 1024px;
+    height: 67vw;
     background-image: url('../img/greencity.png');
     background-size:     cover;                    
     background-repeat:   no-repeat; 
@@ -40,7 +40,7 @@
   font-size: 10vw;
   font-weight: bold;
   letter-spacing: 8px;
-  margin-bottom: 150px; 
+  margin-bottom: 10vw; 
   position: relative; 
   animation: text 2s 1;
 }
@@ -54,7 +54,7 @@
 @keyframes text {
     0%{
         color:transparent;
-        margin-left: 100px;
+        margin-left: 1vw;
     }
 
 }
