--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -180,12 +180,13 @@
     display: block !important;
 }
 
-header {
-  overflow: hidden;
+.header {
   width: 100%;
-  height: 400px;
-}
-header img {
-  margin: -250px 0 0 0;
+  height: 40vw;
+  margin-top: -15vw;
+  background-image: url('../img/greencity.png');
+  background-size:     cover;                    
+  background-repeat:   no-repeat; 
+  position: relative;
 }
 .owl-prev i, .owl-next i {transform : scale(1,6); color: #ccc;}
