--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -183,10 +183,10 @@
 .header {
   width: 100%;
   height: 40vw;
-  margin-top: -15vw;
+  margin-top: -22vw;
   background-image: url('../img/greencity.png');
   background-size:     cover;                    
   background-repeat:   no-repeat; 
   position: relative;
 }
-.owl-prev i, .owl-next i {transform : scale(1,6); color: #ccc;}
+.owl-prev i, .owl-next i {transform : scale(1,6); color: white;}
