--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,8 +1,12 @@
 .intro{
-    opacity: 0.7;
+    opacity: 0.9;
     width: 100%;
     height: 1024px;
-    background-image: url('../img/greencity.png');
+    background-image:  linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url('../img/greencity.png');
     background-size:     cover;                    
     background-repeat:   no-repeat; 
     position: relative;
@@ -16,6 +20,75 @@
 }
 
 .first_text{
-    font-size:80px;
-    color: white
+    width: 60%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.slogan{
+    color: white;
+    font-size:5vw;
+}
+.baseline{
+    color: white;
+    font-size: 2.5vw;
+}
+.services-container{
+    position: relative;
+    width: 100%;
+    margin-top: 5%;
+    height: 1224px;
+}
+
+.service-title{
+    font-size: 2.5vw;
+    color: green;
+    text-align:center;
+    margin-bottom: 5%;
+}
+
+.services{
+    margin: auto;
+    width: 80%;
+    height: 750px;
+    position: relative;
+}
+
+img[alt~="serviceImg"]{
+    float: left;
+    margin: 5px;
+    height: 300px;
+    width: 300px;
+}
+
+.service{
+    margin:auto;
+    height: 310px;
+    width: 40%;
+    display: inline-block;
+}
+
+.service-name{
+    font-size: 1.5vw;
+}
+
+#service1{
+    position: absolute;
+    top:0;
+    left:0
+}#service2{
+    position: absolute;
+    top:0;
+    right:0
+}#service3{
+    position: absolute;
+    bottom:0;
+    left:0
+}#service4{
+    position: absolute;
+    bottom:0;
+    right:0
 }
