--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,7 +1,6 @@
-.intro{
+#intro{
     opacity: 0.9;
-    width: 100%;
-    height: 1024px;
+    height: 50vw;
     background-image:  linear-gradient(
         rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)
