--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,5 +1,6 @@
-#intro{
+.intro{
     opacity: 0.9;
+    width: 100%;
     height: 50vw;
     background-image:  linear-gradient(
         rgba(0, 0, 0, 0.4),
@@ -10,11 +11,66 @@
     background-repeat:   no-repeat; 
     position: relative;
   }
+  
+  .about-us{
+    opacity: 0.9;
+    height: 980px;
+    background-image:  linear-gradient(
+        rgba(0, 0, 0, 0.6),
+        rgba(0, 0, 0, 0.6)
+      ),
+      url('../img/gruppo.jpg');
+    background-size:     cover;                    
+    background-repeat:   no-repeat; 
+    position: relative;
+    margin-top: 8%;
+  }
 
-.separetor{
+
+  .container-projects{
+    position: relative;
+    height: 650px;
+  }
+  .projects{
+    width: 60%;
+    position: absolute;
+    top: 50%;
+    margin-top: 3%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-style: double;
+    border-color: white;
+  }
+  .numbers-container{
+    opacity: 0.9;
+    height: 980px;
+    background-image:  linear-gradient(
+        rgba(0, 0, 0, 0.6),
+        rgba(0, 0, 0, 0.6)
+      ),
+      url('../img/ghostcity.jpg');
+    background-size:     cover;                    
+    background-repeat:   no-repeat; 
+    background-position: center;
+    position: relative;
+    margin-top: 8%;
+  }
+
+#icon{
+    margin: 1em;
+}
+
+.separetor-bottom{
     position: absolute;
     bottom: 0;
-    height: 100px;
+    height: 5vw;
+    width: 100%;
+}
+.separetor-top{
+    position: absolute;
+    top: 0;
+    height: 5vw;
     width: 100%;
 }
 
@@ -27,6 +83,32 @@
     transform: translate(-50%, -50%);
 }
 
+.info-about-us{
+    width: 63%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-style: double;
+    border-color: white;
+    padding: 2%;
+}
+
+.numbers{
+  width: 63%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border-style: double;
+  border-color: white;
+  padding: 5%;
+}
+#row2{
+    margin-top: 5%;
+}
 .slogan{
     color: white;
     font-size:5vw;
@@ -35,59 +117,46 @@
     color: white;
     font-size: 2.5vw;
 }
-.services-container{
-    position: relative;
-    width: 100%;
-    margin-top: 5%;
-    height: 1224px;
-}
-
 .service-title{
-    font-size: 2.5vw;
+    font-size: 40px;
     color: green;
     text-align:center;
     margin-bottom: 5%;
+    margin-top: 5%;
+}
+.project-title{
+  font-size: 40px;
+  color: green;
+  text-align:center;
+  margin-top: 5%;
+}
+.card-img{
+    width: 100%;
+    height: 12vw;
+    object-fit: cover;
 }
 
-.services{
-    margin: auto;
-    width: 80%;
-    height: 750px;
-    position: relative;
+.carousel-item:hover .overlay {
+  height: 100%;
+}
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color:rgba(44, 48, 45, 0.7);
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
 }
 
-img[alt~="serviceImg"]{
-    float: left;
-    margin: 5px;
-    height: 300px;
-    width: 300px;
-}
-
-.service{
-    margin:auto;
-    height: 310px;
-    width: 40%;
-    display: inline-block;
-}
-
-.service-name{
-    font-size: 1.5vw;
-}
-
-#service1{
-    position: absolute;
-    top:0;
-    left:0
-}#service2{
-    position: absolute;
-    top:0;
-    right:0
-}#service3{
-    position: absolute;
-    bottom:0;
-    left:0
-}#service4{
-    position: absolute;
-    bottom:0;
-    right:0
+.centro{
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 5%;
 }
