--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -180,6 +180,23 @@
     display: block !important;
 }
 
+#person_name{
+    margin-top:2vw;
+    margin-left:10vw;
+    text-decoration: underline ;
+}
+
+#person_img{
+  margin-top:2vw;
+  margin-left:10vw;
+}
+
+#person_data{
+  
+  margin-left:5vw;
+}
+
+
 .header {
   width: 100%;
   height: 40vw;
