--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -90,6 +90,8 @@
     text-align:center
   }
 }
+
+
 .social-icons
 {
   padding-left:0;
@@ -196,14 +198,97 @@
   margin-left:5vw;
 }
 
+#service_name{
+  margin-top:2vw;
+  margin-left:2vw;
+  text-decoration: underline ;
+}
+
+#service_img{
+margin-top:2vw;
+margin-left:2vw;
+}
+
+#service_data{
+
+margin-left:5vw;
+}
+
+
+.error-wrapper {
+  background-color: #FFFFFF;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+}
+.error-wrapper {
+  text-align: center;
+  padding: 20px;
+  margin: 60px 0 20px;
+}
+
+#serviceee {
+  background-color: #FFFFFF;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+}
+#serviceee {
+  padding: 20px;
+  margin: 60px 0 20px;
+}
+
+.error-wrapper .error-number {
+  font-size: 120px;
+  line-height: 1;
+  color: #888888;
+}
+
+.error-wrapper .error-text h1 {
+  font-size: 36px;
+  margin: 20px 0;
+  font-weight: bold;
+  color: #df5c5c;
+}
+
+.error-wrapper .error-text p {
+  font-size: 18px;
+  color: #888888;
+}
+
+
 
 .header {
   width: 100%;
-  height: 40vw;
-  margin-top: -22vw;
-  background-image: url('../img/greencity.png');
+  height: 20vw; 
+  margin-top: -3vw;  
+  background-image: url('../img/Panoramica-4-web3.jpg');
   background-size:     cover;                    
   background-repeat:   no-repeat; 
   position: relative;
+}
+
+.header_contact{
+  width: 100%;
+  height: 20vw; 
+  margin-top: -3vw;  
+  background-image: url('../img/computer-1.jpg');
+  background-size:     cover;                    
+  background-repeat:   no-repeat; 
+  position: relative;
+}
+.header_services {
+  width: 100%;
+  height: 40vw;
+  margin-top: -22vw;
+  background-image: url('../img/tramonto2-w.jpg');
+  background-size:     cover;                    
+  background-repeat:   no-repeat; 
+  position: relative;
+}
+
+@media (max-width:767px){
+  .header_services p {
+    color: white; 
+    position: absolute; 
+    margin-top: 10vw;  
+    left:100px
+  }
 }
 .owl-prev i, .owl-next i {transform : scale(1,6); color: white;}
