--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -227,7 +227,7 @@ margin-left:5vw;
 
 #serviceee {
   background-color: #FFFFFF;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.7);
 }
 #serviceee {
   padding: 20px;
@@ -264,6 +264,16 @@ margin-left:5vw;
   position: relative;
 }
 
+.header #p1 {
+  font-size: 3vw; 
+  font-weight:bold;
+  color: white; 
+  position: absolute; 
+  margin-top: 10vw; 
+  text-transform: uppercase; 
+  left:37vw
+}
+
 .header_contact{
   width: 100%;
   height: 20vw; 
@@ -273,6 +283,27 @@ margin-left:5vw;
   background-repeat:   no-repeat; 
   position: relative;
 }
+
+
+.header_contact #p1 {
+  font-size: 3vw; 
+  font-weight:bold;
+  color: white; 
+  position: absolute; 
+  margin-top: 10vw; 
+  text-transform: uppercase; 
+  left:37vw
+}
+
+.header_contact #p2 {
+  font-size: 2vw; 
+  color: white; 
+  position: absolute; 
+  margin-top: 14vw; 
+  align-self: center;
+  left:17vw
+}
+
 .header_services {
   width: 100%;
   height: 40vw;
@@ -283,12 +314,95 @@ margin-left:5vw;
   position: relative;
 }
 
+.header_donate {
+  width: 100%;
+  height: 40vw;
+  margin-top: -20vw;
+  background-image: url('../img/digaw-1.jpg');
+  background-size:     cover;                    
+  background-repeat:   no-repeat; 
+  position: relative;
+}
+
+.header_donate #p1 {
+  font-size: 3vw; 
+  font-weight:bold;
+  color: white; 
+  position: absolute; 
+  margin-top: 28vw; 
+  text-transform: uppercase; 
+  left:37vw
+}
+
+
+.header_services #p1 {
+  font-size: 3vw; 
+  font-weight:bold;
+  color: white; 
+  position: absolute; 
+  margin-top: 28vw; 
+  text-transform: uppercase; 
+  left:37vw
+}
+
+.header_services #p2 {
+  font-size: 2vw; 
+  color: white; 
+  position: absolute; 
+  margin-top: 32vw; 
+  align-self: center;
+  left:30vw
+}
+
 @media (max-width:767px){
-  .header_services p {
-    color: white; 
-    position: absolute; 
-    margin-top: 10vw;  
-    left:100px
+  .header_services #p1 {
+    font-size: 6vw;
+    margin-top: 35vw;
+    left:26vw
+  }
+
+  .header_contact #p1 {
+    font-size: 6vw;
+    margin-top: 15vw;
+    left:26vw
+  }
+
+  .header_donate #p1 {
+    font-size: 6vw;
+    margin-top: 35vw;
+    left:26vw
+  }
+
+  .header #p1 {
+    font-size: 6vw;
+    margin-top: 20vw;
+    left:26vw
+  }
+
+  .header_services {
+    height: 60vw;
+  }
+
+  .header_contact {
+    height: 40vw;
+  }
+
+  .header_donate {
+    width: 100vw;
+    height: 60vw;
+  }
+
+  .header{
+    width: 100vw;
+    height: 50vw;
+  }
+
+  .header_services #p2 {
+    font-size: 0vw;
+  }
+
+  .header_contact #p2 {
+    font-size: 0vw;
   }
 }
 .owl-prev i, .owl-next i {transform : scale(1,6); color: white;}
