--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -11,7 +11,18 @@
     background-repeat:   no-repeat; 
     position: relative;
   }
-  
+  @media (max-width:767px){
+    .intro {
+      height: 80vw;
+    }
+    .intro .slogan {
+      font-size: 8vw;
+    }
+
+    .intro .baseline {
+      font-size: 4vw;
+    }
+  }
   .about-us{
     opacity: 0.9;
     height: 980px;
@@ -75,7 +86,7 @@
 }
 
 .first_text{
-    width: 60%;
+    width: 70%;
     position: absolute;
     top: 50%;
     left: 50%;
