--- a/public/assets/css/service.css
+++ b/public/assets/css/service.css
@@ -32,6 +32,11 @@
   margin-top: 8%;
 }
 
+#person-info{
+  margin-top: 2%;
+  margin-right: 2%;
+}
+
 .service-img{
   float: left;
   clear: both;
@@ -41,4 +46,39 @@
 .service-paragraph{
   font-size: large;
   text-align: justify;
+}
+
+.container-projects{
+  margin-top: 12%;
+}
+.project-title{
+  font-size: 30px;
+  color: green;
+  text-align:center;
+  margin-top: 5%;
+}
+
+.carousel-item:hover .overlay {
+  height: 100%;
+}
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color:rgba(44, 48, 45, 0.7);
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.centro{
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 5%;
 }
