--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -174,3 +174,23 @@
   transform: translate(-50%, -50%);
   padding: 5%;
 }
+
+.projects{
+  display: flex;
+  justify-content: center;
+}
+
+#carouselExampleCaptions{
+  width: 50vw;
+}
+@media(max-width: 1100px){
+  #carouselExampleCaptions2{
+    width: 80vw;
+  }
+}
+
+@media(max-width: 1100px){
+  #carouselExampleCaptions{
+    width: 80vw;
+  }
+}
