--- a/public/assets/css/services.css
+++ b/public/assets/css/services.css
@@ -25,7 +25,8 @@
 .serviziointro{
     opacity: 0.9;
     width: 100%;
-    height: 10vw;
+    height: 20vw;    
+    margin-top: -3vw;
     background-image:  linear-gradient(
         rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)
@@ -40,4 +41,15 @@
  .slogan{
     color: white;
     font-size:5vw;
+}
+
+@media (max-width:767px){
+    .serviziointro{
+        height: 40vw;    
+    }
+
+    .slogan{
+        color: white;
+        font-size:9vw;
+    }
 }
