--- a/public/assets/css/services.css
+++ b/public/assets/css/services.css
@@ -3,6 +3,7 @@
     border-style: double;
     border-color: grey;
     padding: 2%;
+    background-color: white;
 }
 #service_name{
     margin-top: 8%;
