--- a/public/assets/css/allprojects.css
+++ b/public/assets/css/allprojects.css
@@ -3,9 +3,10 @@
     border-style: double;
     border-color: grey;
     padding: 2%;
+    background-color: white;
 }
 #service_name{
-    margin-top: 8%;
+    top: 8%;
 }
 #text{
     text-align: justify;
@@ -24,7 +25,8 @@
 .serviziointro{
     opacity: 0.9;
     width: 100%;
-    height: 10vw;
+    height: 20vw;    
+    margin-top: -3vw;
     background-image:  linear-gradient(
         rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)
@@ -40,3 +42,43 @@
     color: white;
     font-size:5vw;
 }
+
+@media (max-width:767px){
+    .serviziointro{
+        height: 40vw;    
+    }
+
+    .slogan{
+        color: white;
+        font-size:9vw;
+    }
+}
+
+
+#scrolltop {
+    position: fixed;
+    right: 15px;
+    bottom: 100px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: 23px;
+    padding-top: 3px;
+    background-color: #555555;
+    color: #FFFFFF;
+    transition: all 0.3s ease-in;
+    z-index: 1040;
+    cursor: pointer;
+    transform: translateY(70px);
+}
+
+#scrolltop.in {
+    transform: translateY(0);
+}
+
+.pagination {
+    padding-top: 3vw;
+}
+
+
+
