--- a/public/assets/css/service.css
+++ b/public/assets/css/service.css
@@ -1,7 +1,8 @@
 .serviziointro{
     opacity: 0.9;
-    width: 100%;
-    height: 10vw;
+    width: 100%;    
+    height: 20vw; 
+    margin-top: -3vw;
     background-image:  linear-gradient(
         rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)
