--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -192,6 +192,24 @@
     text-decoration: underline ;
 }
 
+.array_person #month {
+  color:white;
+  font-weight: bold;
+  text-transform: uppercase;
+  position: absolute;
+  margin-top: -13vw;
+  
+  font-size: 3vw;
+}
+.array_person #year {
+  color:white;
+  font-size: 3vw;
+  font-weight: bold;
+  text-transform: uppercase;
+  position: absolute;
+  margin-top: -10vw;
+}
+
 
 #person_data{
   
