--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -199,6 +199,7 @@
   position: absolute;
   margin-top: -13vw;
   
+  
   font-size: 3vw;
 }
 .array_person #year {
@@ -208,6 +209,7 @@
   text-transform: uppercase;
   position: absolute;
   margin-top: -10vw;
+  
 }
 
 
@@ -461,6 +463,7 @@ margin-left:5vw;
     margin-left:10vw;
   }
 
+
 }
 
 
@@ -471,7 +474,24 @@ margin-left:5vw;
     left:26vw
   }
 
+  #months_event {
+    padding-bottom: 5vw;
+  }
+  
+  .array_person #month {
+    font-size: 9vw;
+    position: relative;
+    margin-top: -50vw;
+    
+  }
+  .array_person #year {
+    position: relative;
+    margin-top: 2vw;
+    font-size: 9vw;
+  }
+
   .array_person {
+    padding: 10vw;
     margin-top: 30px; 
     margin-right: 6vw;
     width: 100vw;
