--- a/public/assets/css/service.css
+++ b/public/assets/css/service.css
@@ -114,3 +114,24 @@
     width: 80vw;
   }
 }
+
+.inactiveLink {
+  pointer-events: none;
+}
+
+.evnt-btn {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+
+}
+.evnt-btn:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+.next, .previous {
+  background-color: #4CAF50;
+  color: white;
+}
