--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -416,7 +416,7 @@ margin-left:5vw;
 
 .array_person {
   margin-top: 30px; 
-  margin-right: 6vw;
+  flex:auto;
   width: 15vw;
 }
 
@@ -433,7 +433,7 @@ margin-left:5vw;
 }
 .array_person p {
   text-align: center; 
-  width: 17vw; 
+  width: 100%; 
 }
 
 .array_person #profession {
