--- a/public/assets/css/allprojects.css
+++ b/public/assets/css/allprojects.css
@@ -1,6 +1,6 @@
 #service{
     border-radius: 5px;
-    border-style: double;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-color: grey;
     padding: 2%;
     background-color: white;
