--- a/public/assets/css/service.css
+++ b/public/assets/css/service.css
@@ -7,12 +7,47 @@
         rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)
       ),
-      url('../img/serviziointro.jpg');
+      url('../img/computer-7.jpg');
     background-size:     cover;                    
     background-repeat:   no-repeat;
     background-position: center;
     position: relative;
   }
+
+  .eventintro{
+    opacity: 0.9;
+    width: 100%;    
+    height: 20vw; 
+    margin-top: -3vw;
+    background-image:  linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url('../img/emotions-3459666_1280.jpg');
+    background-size:     cover;                    
+    background-repeat:   no-repeat;
+    background-position: center;
+    position: relative;
+  }
+
+  .projectintro{
+    opacity: 0.9;
+    width: 100%;    
+    height: 20vw; 
+    margin-top: -3vw;
+    background-image:  linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url('../img/tramonto2-w.jpg');
+    background-size:     cover;                    
+    background-repeat:   no-repeat;
+    background-position: center;
+    position: relative;
+  }
+
+  
+
 
 .ui-datepicker-calendar {
   display: none;
@@ -136,6 +171,8 @@
   padding: 8px 16px;
 
 }
+
+
 .evnt-btn:hover {
   background-color: #ddd;
   color: black;
@@ -145,4 +182,15 @@
 .next, .previous {
   background-color: #4CAF50;
   color: white;
+}
+
+@media (max-width: 767px){
+  .serviziointro, .eventintro, .projectintro {
+    width: 100vw;
+    height: 40vw;
+  }
+  
+  .slogan {
+    font-size: 8vw;
+  }
 }
