changes event and home

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -177,6 +177,16 @@
 }
 
 
+#service{
+  border-radius: 5px;
+  border-style: double;
+  border-color: grey;
+  padding: 2%;
+  background-color: white;
+}
+#text{
+  text-align: justify;
+}
 .box-b,
 .box-e {
   position: relative;
