--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -66,6 +66,11 @@
     position: relative;
     height: 650px;
   }
+
+  .container-service {
+    width: 80%; 
+    margin: auto;
+  }
   .projects{
     width: 60%;
     position: absolute;
@@ -180,10 +185,14 @@
   padding: 5%;
 }
 
+#car {
+  margin-top: 2vw;
+}
+
 
 #service{
   border-radius: 5px;
-  border-style: double;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-color: grey;
   padding: 2%;
   background-color: white;
@@ -191,11 +200,62 @@
 #text{
   text-align: justify;
 }
+
+#text p{
+  overflow : hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box; 
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical
+}
+
+#second-row {
+  margin-top: 3%;
+} 
 .box-b,
 .box-e {
   position: relative;
 }
 
+#icon1 {
+  font-size: 5em;
+  color:white;
+}
+
+body {
+  background: rgba(170, 170, 170, 0.1); 
+}
+
+#texticon1 {
+  color: white; 
+  font-size: large;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-weight:bold
+}
+
+#cento{
+  width: 100%;height: 100%;position: relative;
+}
+
+#textcaro {
+  overflow : hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box; 
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical; 
+  color: white;
+}
+
+#h450 {
+  height:450px;
+  width: 100%;
+}
+
+#carousel- {
+  margin-left:auto;
+  margin-right:auto
+}
 
  .box-b a {color:rgba(255, 255, 255, 0.979)}
  .box-e a {color:rgba(255, 255, 255, 0.596)}
@@ -273,6 +333,7 @@
 
 #carouselExampleCaptions{
   width: 50vw;
+  height: 450px;
 }
 @media(max-width: 1100px){
   #carouselExampleCaptions2{
