--- a/public/assets/css/service.css
+++ b/public/assets/css/service.css
@@ -46,9 +46,6 @@
     position: relative;
   }
 
-  
-
-
 .ui-datepicker-calendar {
   display: none;
   }
@@ -79,7 +76,9 @@
   margin-right: 2%;
   margin-bottom: 3%;
 }
-
+.service-img:hover {
+ border: green solid 2px;
+}
 .service-img{
   float: left;
   clear: both;
