--- a/public/assets/css/mystyle.css
+++ b/public/assets/css/mystyle.css
@@ -331,88 +331,59 @@ body {
 
 
 
-.header {
+.header_association {
   opacity: 0.9;
-  width: 100%;
+  width: 100%;    
   height: 20vw; 
   margin-top: -3vw;
   background-image:  linear-gradient(
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.4)
-      ),
-      url('../img/Panoramica-4-web3.jpg');   
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url('../img/Panoramica-4-web3.jpg');
   background-size:     cover;                    
-  background-repeat:   no-repeat; 
+  background-repeat:   no-repeat;
+  background-position: center;
   position: relative;
 }
 
 .header_team {
   opacity: 0.9;
-  width: 100%;
+  width: 100%;    
   height: 20vw; 
   margin-top: -3vw;
   background-image:  linear-gradient(
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.4)
-      ),
-      url('../img/gruppo.jpg');  
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url('../img/gruppo.jpg');
   background-size:     cover;                    
-  background-repeat:   no-repeat; 
+  background-repeat:   no-repeat;
   position: relative;
 }
 
-.header_team #p1 {
-  font-size: 5vw; 
-  font-weight:bold;
-  color: white; 
-  position: absolute; 
-  margin-top: 7vw; 
-  left:36vw
-}
-
-
-.header #p1 {
-  font-size: 5vw; 
-  font-weight:bold;
-  color: white; 
-  position: absolute; 
-  margin-top: 8vw; 
-  left:34vw
-}
 
 .header_contact{
   opacity: 0.9;
-  width: 100%;
+  width: 100%;    
   height: 20vw; 
-  margin-top: -3vw;  
+  margin-top: -3vw;
   background-image:  linear-gradient(
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.4)
-      ),
-      url('../img/computer-1.jpg');  
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url('../img/computer-1.jpg');
   background-size:     cover;                    
-  background-repeat:   no-repeat; 
+  background-repeat:   no-repeat;
+  background-position: center;
   position: relative;
 }
 
-
-.header_contact #p1 {
-  font-size: 4vw; 
-  font-weight:bold;
-  color: white; 
-  position: absolute; 
-  margin-top: 8vw; 
-  left:34vw
+.baseline{
+  color: white;
+  font-size: 2.5vw;
 }
 
-.header_contact #p2 {
-  font-size: 2vw; 
-  color: white; 
-  position: absolute; 
-  margin-top: 14vw; 
-  align-self: center;
-  left:17vw
-}
 
 .header_services {
   opacity: 0.9;
@@ -431,26 +402,31 @@ body {
 
 .header_donate {
   opacity: 0.9;
-  width: 100%;
-  height: 40vw;
-  margin-top: -20vw;
+  width: 100%;    
+  height: 20vw; 
+  margin-top: -3vw;
   background-image:  linear-gradient(
-    rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0.4)
-  ),
-  url('../img/digaw-1.jpg');  
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url('../img/digaw-1.jpg');
   background-size:     cover;                    
-  background-repeat:   no-repeat; 
+  background-repeat:   no-repeat;
+  background-position: center;
   position: relative;
 }
-
-.header_donate #p1 {
-  font-size: 5vw; 
-  font-weight:bold;
-  color: white; 
-  position: absolute; 
-  margin-top: 26vw; 
-  left:32vw
+.slogan{
+  color: white;
+  font-size:5vw;
+}
+.first_text{
+  text-align: center;
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 
