--- a/public/assets/css/allprojects.css
+++ b/public/assets/css/allprojects.css
@@ -21,6 +21,10 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+body {
+    background: rgba(170, 170, 170, 0.1) !important;
+  }
+  
 
 .serviziointro{
     opacity: 0.9;
